--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <main>
-        <h1 id="titulo">Segunda Entrega Proyecto Final - JavaScript</h1>
+        <h1 id="titulo">Desafío Complementario Optimizando el Proyecto Final - JavaScript</h1>
         <p>CoderHouse</p>
         <div class="main_titulo">
             <h3> Agregar producto </h1>
